--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -16,8 +16,12 @@ RUN pnpm install
 # Copy the rest of the project files
 COPY . .
 
-# Run Prisma migrations (before the build)
-RUN npx prisma migrate deploy
+# # Ensure the DATABASE_URL environment variable is available during the build
+# ARG DATABASE_URL
+# ENV DATABASE_URL=${DATABASE_URL}
+
+# # Run Prisma migrations (before the build)
+# RUN npx prisma migrate deploy
 
 # Build the application
 RUN pnpm run build
@@ -41,8 +45,8 @@ RUN pnpm install --prod
 COPY --from=build /app/dist /app/dist
 
 # Copy any Prisma files needed in production (e.g., Prisma client)
-COPY --from=build /app/node_modules/.prisma /app/node_modules/.prisma
-COPY --from=build /app/prisma /app/prisma
+# COPY --from=build /app/node_modules/.prisma /app/node_modules/.prisma
+# COPY --from=build /app/prisma /app/prisma
 
 # Expose the application port (change if needed)
 EXPOSE 3000
