--- a/package.json
+++ b/package.json
@@ -16,20 +16,29 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "amqplib": "^0.10.4",
     "compression": "^1.7.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
+    "inversify": "^6.1.4",
+    "nodemailer": "^6.9.16",
+    "reflect-metadata": "^0.2.2",
     "ts-loader": "^9.5.1",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
+    "@types/nodemailer": "^6.4.16",
     "nodemon": "^3.1.7",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
