--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "amqplib": "^0.10.4",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -25,9 +27,12 @@
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "inversify": "^6.1.4",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "ts-loader": "^9.5.1",
+    "uuid": "^11.0.3",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "winston": "^3.17.0",
@@ -36,9 +41,12 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.5",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
     "@types/nodemailer": "^6.4.16",
     "nodemon": "^3.1.7",
