--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "npx prisma generate",
-    "build": "webpack",
-    "start": "node dist/index.js",
+    "build": "tsup",
+    "start": "node -r tsconfig-paths/register -r dotenv/config dist/index.js",
     "dev": "nodemon",
     "migrate": "prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +17,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "amqplib": "^0.10.4",
-    "bcrypt": "^5.1.1",
+    "argon2": "^0.41.1",
     "body-parser": "^1.20.3",
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
@@ -32,17 +32,14 @@
     "nodemailer": "^6.9.16",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
-    "ts-loader": "^9.5.1",
     "uuid": "^11.0.3",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
     "winston": "^3.17.0",
+    "tsconfig-paths": "^4.2.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
-    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
@@ -54,7 +51,7 @@
     "nodemon": "^3.1.7",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
+    "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
