--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "digital-library-api",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "prebuild":"npx prisma generate",
-    "build": "webpack",
-    "start": "node dist/app.js",
+    "prebuild": "npx prisma generate",
+    "build": "tsup",
+    "start": "node -r tsconfig-paths/register -r dotenv/config dist/index.js",
     "dev": "nodemon",
     "migrate": "prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,24 +16,42 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "amqplib": "^0.10.4",
+    "argon2": "^0.41.1",
+    "body-parser": "^1.20.3",
     "compression": "^1.7.5",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
-    "ts-loader": "^9.5.1",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
+    "inversify": "^6.1.4",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
+    "redis": "^4.7.0",
+    "reflect-metadata": "^0.2.2",
+    "uuid": "^11.0.3",
+    "winston": "^3.17.0",
+    "tsconfig-paths": "^4.2.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
+    "@types/body-parser": "^1.19.5",
     "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
+    "@types/nodemailer": "^6.4.16",
     "nodemon": "^3.1.7",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
+    "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
