feat: update Dockerfile to use Node 20-alpine, add .npmrc for pnpm configuration, and enhance .dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,14 @@
 node_modules
-
+logs
 dist
 Dockerfile
+Dockerfile.local
 docker-compose.yml
 .dockerignore
 *.md
 .git
 .env
+.env.staging
+nodemon.json
+
+
