--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon",
     "migrate": "prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --ext .js,.ts .",
+    "lint": "eslint",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "keywords": [],
@@ -54,6 +54,7 @@
     "@typescript-eslint/parser": "^8.16.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.12.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.4.1",
