--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node -r tsconfig-paths/register -r dotenv/config dist/index.js",
     "dev": "nodemon",
     "migrate": "prisma migrate dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "keywords": [],
   "author": "",
@@ -31,13 +33,14 @@
     "nodemailer": "^6.9.16",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
+    "tsconfig-paths": "^4.2.0",
     "uuid": "^11.0.3",
     "winston": "^3.17.0",
-    "tsconfig-paths": "^4.2.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/amqplib": "^0.10.5",
     "@types/body-parser": "^1.19.5",
     "@types/compression": "^1.7.5",
@@ -47,11 +50,19 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
     "@types/nodemailer": "^6.4.16",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.12.0",
     "nodemon": "^3.1.7",
+    "prettier": "^3.4.1",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.16.0"
   }
 }
