--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "http-status-codes": "^2.3.0",
     "inversify": "^6.1.4",
     "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
+    "uploadthing": "^7.4.0",
     "uuid": "^11.0.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
