--- a/package.json
+++ b/package.json
@@ -16,11 +16,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "@uploadthing/shared": "^7.1.2",
-    "amqplib": "^0.10.4",
+    "@prisma/client": "^6.1.0",
     "argon2": "^0.41.1",
-    "body-parser": "^1.20.3",
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -31,12 +28,10 @@
     "http-status-codes": "^2.3.0",
     "inversify": "^6.1.4",
     "jsonwebtoken": "^9.0.2",
-    "multer": "1.4.5-lts.1",
-    "nodemailer": "^6.9.16",
+    "meilisearch": "^0.47.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
-    "uploadthing": "^7.4.0",
     "uuid": "^11.0.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
@@ -44,8 +39,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/amqplib": "^0.10.5",
-    "@types/body-parser": "^1.19.5",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
@@ -53,7 +46,6 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
-    "@types/nodemailer": "^6.4.16",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "eslint": "^9.15.0",
