--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "packageManager": "pnpm@9.12.2",
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "argon2": "^0.41.1",
