--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,3 +1,38 @@
+# name: Backend CD
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v3
+
+#       - name: Pull Docker Image and Deploy Services
+#         uses: appleboy/ssh-action@v1.2.1
+#         with:
+#           host: ${{ secrets.EC2_HOST }}
+#           username: ${{ secrets.EC2_USER }}
+#           key: ${{ secrets.EC2_SSH_KEY }}
+#           script: |
+#             cd ~/chyra-library/digital-library-api
+#             git pull origin main
+#             echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
+#             echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
+#             echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+#             echo "POSTGRES_DB=${{ vars.POSTGRES_DB }}" >> .env
+#             echo "REDIS_URL=${{ vars.REDIS_URL }}" >> .env
+#             echo "ACCESS_TOKEN_SECRET=${{ vars.ACCESS_TOKEN_SECRET }}" >> .env
+#             echo "VITE_MEILISEARCH_HOST=${{ vars.VITE_MEILISEARCH_HOST }}" >> .env
+#             echo "VITE_MEILISEARCH_API_KEY=${{ secrets.VITE_MEILISEARCH_API_KEY }}" >> .env
+#             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/chyra-api:latest
+#             docker-compose down
+#             docker-compose up -d
 name: Backend CD
 
 on:
@@ -8,35 +43,36 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up SSH Connection
-        uses: appleboy/ssh-action@v0.1.4
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-
       - name: Pull Docker Image and Deploy Services
-        uses: appleboy/ssh-action@v0.1.4
+        uses: appleboy/ssh-action@v1.2.1
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            set -e
             cd ~/chyra-library/digital-library-api
             git pull origin main
-            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
-            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
-            echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
-            echo "POSTGRES_DB=${{ vars.POSTGRES_DB }}" >> .env
-            echo "REDIS_URL=${{ vars.REDIS_URL }}" >> .env
-            echo "ACCESS_TOKEN_SECRET=${{ vars.ACCESS_TOKEN_SECRET }}" >> .env
-            echo "VITE_MEILISEARCH_HOST=${{ vars.VITE_MEILISEARCH_HOST }}" >> .env
-            echo "VITE_MEILISEARCH_API_KEY=${{ secrets.VITE_MEILISEARCH_API_KEY }}" >> .env
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/chyra-api:latest
+
+            # Use environment variables directly in docker-compose
+            export DATABASE_URL=${{ secrets.DATABASE_URL }}
+            export POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+            export POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+            export POSTGRES_DB=${{ vars.POSTGRES_DB }}
+            export REDIS_URL=${{ vars.REDIS_URL }}
+            export ACCESS_TOKEN_SECRET=${{ vars.ACCESS_TOKEN_SECRET }}
+            export VITE_MEILISEARCH_HOST=${{ vars.VITE_MEILISEARCH_HOST }}
+            export VITE_MEILISEARCH_API_KEY=${{ secrets.VITE_MEILISEARCH_API_KEY }}
+
+            # Pull the latest images
+            docker-compose pull
+
+            # Bring down the existing containers and bring up new ones
             docker-compose down
             docker-compose up -d
