--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Pull Docker Image and Deploy Services
         uses: appleboy/ssh-action@v1.2.1
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
+          host: ${{ vars.EC2_HOST }}
+          username: ${{ vars.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             set -e
