--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Pull Docker Image and Deploy Services
-        uses: appleboy/ssh-action@v1.2.1
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ vars.EC2_HOST }}
           username: ${{ vars.EC2_USER }}
