fix: correct typo in CD workflow to use 'docker compose' command

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,4 +40,4 @@ jobs:
 
             # Bring down the existing containers and bring up new ones
             docker compose down
-            docker ncompose up -d
+            docker compose up -d
