--- a/nginx/nginx.legacy.conf
+++ b/nginx/nginx.legacy.conf
@@ -17,11 +17,11 @@ http {
 
     # Upstreams
     upstream client {
-        server client:80;
+        server client-service:3000;
     }
 
     upstream api {
-        server api:8080;
+        server backend-service:8001;
     }
 
     server {
