--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -83,4 +83,48 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
+
+    server {
+        listen 80;
+        server_name localhost;
+
+        # Client Service (Frontend)
+        location / {
+            proxy_pass http://client;
+            proxy_cache chyra_cache;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Cache static assets
+            location ~* \.(?:ico|css|js|gif|jpe?g|png|woff|woff2|ttf|svg|eot|otf|pdf|webp)$ {
+                expires 30d;
+                access_log off;
+                add_header Cache-Control "public";
+            }
+        }
+
+        # API Service Proxy with CORS & Rate Limiting
+        location /api/ {
+            limit_req zone=req_limit burst=20 nodelay;
+            proxy_pass http://api;
+            proxy_cache chyra_cache;
+            client_max_body_size 200M;
+
+            # CORS Headers
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With' always;
+
+            if ($request_method = OPTIONS) {
+                return 204;
+            }
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 }
