--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,79 +1,139 @@
+# events {
+#     worker_connections 1024;
+# }
+
+# http {
+#     # Cache Configuration
+#     proxy_cache_path /etc/nginx/cache levels=1:2 keys_zone=chyra_cache:10m max_size=10g inactive=60m use_temp_path=off;
+
+#     # Gzip Compression
+#     gzip on;
+#     gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
+#     gzip_proxied any;
+#     gzip_comp_level 6;
+
+#     # Limit Request to Prevent DDoS
+#     limit_req_zone $binary_remote_addr zone=req_limit:10m rate=10r/s;
+
+#     # Upstreams
+#     upstream client {
+#         server client:80;
+#     }
+
+#     upstream api {
+#         server api:8080;
+#     }
+
+#     server {
+#         listen 80;
+#         server_name chyra.me www.chyra.me lib.chyra.me localhost;
+
+#         # Client Service
+#         location / {
+#             proxy_pass http://client;
+#             proxy_cache chyra_cache;
+#             proxy_http_version 1.1;
+#             proxy_set_header Upgrade $http_upgrade;
+#             proxy_set_header Connection 'upgrade';
+#             proxy_set_header Host $host;
+#             proxy_cache_bypass $http_upgrade;
+
+#             # Static File Cache
+#             location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|svg|eot|otf|mp4|webm|ogv|webp|pdf|doc|docx|xls|xlsx|ppt|pptx|zip|rar|7z)$ {
+#                 expires 30d;
+#                 access_log off;
+#             }
+#         }
+
+#         # API Proxy with CORS & Rate Limiting
+#         location /api/ {
+#             limit_req zone=req_limit burst=20 nodelay;
+#             add_header 'Access-Control-Allow-Origin' '*' always;
+#             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+#             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With' always;
+
+#             if ($request_method = OPTIONS) {
+#                 return 204;
+#             }
+
+#             proxy_pass http://api;
+#             proxy_cache chyra_cache;
+#             client_max_body_size 200M;
+#             proxy_set_header X-Forwarded-For $remote_addr;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#     }
+
+#     server {
+#         listen 80;
+#         server_name api.chyra.me;
+
+#         location / {
+#             proxy_pass http://api;
+#             proxy_cache chyra_cache;
+#             client_max_body_size 200M;
+
+#             proxy_set_header X-Forwarded-For $remote_addr;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#     }
+# }
 events {
     worker_connections 1024;
 }
 
 http {
-    # Cache Configuration
-    proxy_cache_path /etc/nginx/cache levels=1:2 keys_zone=chyra_cache:10m max_size=10g inactive=60m use_temp_path=off;
 
-    # Gzip Compression
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
-    gzip_proxied any;
-    gzip_comp_level 6;
-
-    # Limit Request to Prevent DDoS
-    limit_req_zone $binary_remote_addr zone=req_limit:10m rate=10r/s;
-
-    # Upstreams
     upstream client {
-        server client:80;
+        server client:4173;
+    }
+
+    upstream admin {
+        server admin:3001;
     }
 
     upstream api {
         server api:8080;
     }
 
+    proxy_cache_path /etc/nginx/cache levels=1:2 keys_zone=galbi_cache:10m max_size=10g inactive=60m use_temp_path=off;
+
     server {
         listen 80;
-        server_name chyra.me www.chyra.me lib.chyra.me;
+        server_name lib.chyra.vn www.chyra.vn localhost;
 
-        # Client Service
+
         location / {
-            proxy_pass http://client;
-            proxy_cache chyra_cache;
+            proxy_pass http://client; #Don't forget to update your port number
+            proxy_cache galbi_cache;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-
-            # Static File Cache
-            location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|svg|eot|otf|mp4|webm|ogv|webp|pdf|doc|docx|xls|xlsx|ppt|pptx|zip|rar|7z)$ {
-                expires 30d;
-                access_log off;
-            }
         }
 
-        # API Proxy with CORS & Rate Limiting
-        location /api/ {
-            limit_req zone=req_limit burst=20 nodelay;
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With' always;
-
-            if ($request_method = OPTIONS) {
-                return 204;
-            }
-
+        location /api {
+            rewrite /api/(.*) /$1 break;
             proxy_pass http://api;
-            proxy_cache chyra_cache;
-            client_max_body_size 200M;
-            proxy_set_header X-Forwarded-For $remote_addr;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
+
     server {
         listen 80;
-        server_name api.chyra.me;
+        server_name api.chyra.me www.api.chyra.me;
+
 
         location / {
             proxy_pass http://api;
-            proxy_cache chyra_cache;
+            proxy_cache galbi_cache;
             client_max_body_size 200M;
 
             proxy_set_header X-Forwarded-For $remote_addr;
@@ -81,47 +141,16 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
         }
     }
 
     server {
         listen 80;
-        server_name localhost;
-
-        # Client Service (Frontend)
+        server_name admin.chyra.me www.admin.chyra.,e;
         location / {
-            proxy_pass http://client;
-            proxy_cache chyra_cache;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Cache static assets
-            location ~* \.(?:ico|css|js|gif|jpe?g|png|woff|woff2|ttf|svg|eot|otf|pdf|webp)$ {
-                expires 30d;
-                access_log off;
-                add_header Cache-Control "public";
-            }
-        }
-
-        # API Service Proxy with CORS & Rate Limiting
-        location /api/ {
-            limit_req zone=req_limit burst=20 nodelay;
-            proxy_pass http://api;
-            proxy_cache chyra_cache;
-            client_max_body_size 200M;
-
-            # CORS Headers
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With' always;
-
-            if ($request_method = OPTIONS) {
-                return 204;
-            }
-
+            proxy_pass http://admin;
+            proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
