fix: correct server_name in nginx configuration for admin service

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -147,7 +147,7 @@ http {
 
     server {
         listen 80;
-        server_name admin.chyra.me www.admin.chyra.,e;
+        server_name admin.chyra.me www.admin.chyra.me;
         location / {
             proxy_pass http://admin;
             proxy_set_header X-Forwarded-For $remote_addr;
