fix: update Dockerfile to correct dist directory path and add Prisma generate step in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
 
+      - run: pnpm dlx prisma generate
+
       - name: Build Project
         run: |
           echo "PORT=8080" > .env
