--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,10 +8,6 @@ http {
         server client:4173;
     }
 
-    upstream admin {
-        server admin:3001;
-    }
-
     upstream api {
         server api:8080;
     }
@@ -23,7 +19,7 @@ http {
         server_name lib.chyra.vn www.chyra.vn;
 
         location / {
-            proxy_pass http://client; #Don't forget to update your port number
+            proxy_pass http://client:4173; #Don't forget to update your port number
             proxy_cache chyra_cache;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -43,7 +39,7 @@ http {
         server_name api.chyra.me www.api.chyra.me;
 
         location / {
-            proxy_pass http://api;
+            proxy_pass http://api:8080;
             proxy_cache chyra_cache;
             client_max_body_size 200M;
 
