chore: comment out performance and security settings in nginx configuration

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 # Global configuration for performance and security
-user www-data;
-worker_processes auto;
-worker_rlimit_nofile 100000;
+# user www-data;
+# worker_processes auto;
+# worker_rlimit_nofile 100000;
 
 events {
     worker_connections 4096;
@@ -41,7 +41,10 @@ http {
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy "no-referrer-when-downgrade";
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self'; frame-ancestors 'self';";
+    # add_header Content-Security-Policy "default-src 'self'; script-src 'self'
+    #  'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';
+    #   img-src 'self' data:; font-src 'self'; connect-src 'self';
+    #    frame-ancestors 'self';";
 
     # Rate limiting (optional)
     limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
