--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "outDir": "./dist", // specify the output directory for compiled files
     "sourceMap": true // generate source maps
   },
-  "include": ["src/**/*"], // include all files under src/
+  "include": ["src/**/*", "../digital-library/src/routes/v2"], // include all files under src/
   "exclude": ["node_modules", "dist"] // exclude node_modules and dist folder from compilation
 }
