chore: remove deprecated nginx configuration and consolidate settings in main config file

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,101 +1,58 @@
-# Global configuration for performance and security
-# user www-data;
-# worker_processes auto;
-# worker_rlimit_nofile 100000;
-
-events {
-    worker_connections 4096;
-    multi_accept on;
-    use epoll;
-}
-
 http {
-    # Basic settings
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-    server_tokens off;
 
-    # MIME types
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    upstream client-gateway {
+        server client:4173;
+    }
 
-    # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    upstream api-gateway {
+        server api:8080;
+    }
 
-    # Gzip compression
-    gzip on;
-    gzip_min_length 1024;
-    gzip_comp_level 6;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-    gzip_vary on;
+    proxy_cache_path /etc/nginx/cache levels=1:2 keys_zone=chyra_cache:10m max_size=10g inactive=60m use_temp_path=off;
 
-    # Cache settings
-    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m max_size=1g inactive=60m use_temp_path=off;
-
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
-    add_header X-XSS-Protection "1; mode=block";
-    add_header Referrer-Policy "no-referrer-when-downgrade";
-    # add_header Content-Security-Policy "default-src 'self'; script-src 'self'
-    #  'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';
-    #   img-src 'self' data:; font-src 'self'; connect-src 'self';
-    #    frame-ancestors 'self';";
-
-    # Rate limiting (optional)
-    limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
-
-    # Client frontend
     server {
         listen 80;
-        server_name lib.chyra.me www.chyra.me chyra.me;
+        server_name lib.chyra.vn www.chyra.vn;
 
-        # Enable caching for static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            proxy_cache my_cache;
-            proxy_pass http://client:4173;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            expires 30d;
-            add_header Cache-Control "public, no-transform";
-        }
-
-        # Proxy to client container
         location / {
-            proxy_pass http://client:4173;
+            proxy_pass http://client-gateway; #Don't forget to update your port number
+            proxy_cache chyra_cache;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
         }
 
-         location /api {
+        location /api {
             rewrite /api/(.*) /$1 break;
-            proxy_pass http://api:8080;
+            proxy_pass http://api;
         }
     }
 
-    # Backend API
     server {
         listen 80;
-        server_name api.chyra.me;
+        server_name api.chyra.me www.api.chyra.me;
 
-        # Rate limiting (optional)
-        limit_req zone=one burst=20;
-
-        # Proxy to API container
         location / {
-            proxy_pass http://api:8080;
+            proxy_pass http://api-gateway;
+            proxy_cache chyra_cache;
+            client_max_body_size 200M;
+
+            proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    server {
+        listen 80;
+        server_name admin.chyra.me www.admin.chyra.me;
+
+        location / {
+            return 404;
         }
     }
 }
