--- a/nginx/nginx.legacy.conf
+++ b/nginx/nginx.legacy.conf
@@ -1,86 +1,198 @@
-events {
-    worker_connections 1024;
-}
+# mark 1: not even worked
 
-http {
-    # Cache Configuration
-    proxy_cache_path /etc/nginx/cache levels=1:2 keys_zone=chyra_cache:10m max_size=10g inactive=60m use_temp_path=off;
+# events {
+#     worker_connections 1024;
+# }
 
-    # Gzip Compression
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
-    gzip_proxied any;
-    gzip_comp_level 6;
+# http {
+#     # Cache Configuration
+#     proxy_cache_path /etc/nginx/cache levels=1:2 keys_zone=chyra_cache:10m max_size=10g inactive=60m use_temp_path=off;
 
-    # Limit Request to Prevent DDoS
-    limit_req_zone $binary_remote_addr zone=req_limit:10m rate=10r/s;
+#     # Gzip Compression
+#     gzip on;
+#     gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
+#     gzip_proxied any;
+#     gzip_comp_level 6;
 
-    # Upstreams
-    upstream client {
-        server client-service:3000;
-    }
+#     # Limit Request to Prevent DDoS
+#     limit_req_zone $binary_remote_addr zone=req_limit:10m rate=10r/s;
 
-    upstream api {
-        server backend-service:8001;
-    }
+#     # Upstreams
+#     upstream client {
+#         server client-service:3000;
+#     }
 
-    server {
-        listen 80;
-        server_name chyra.me www.chyra.me lib.chyra.me;
+#     upstream api {
+#         server backend-service:8001;
+#     }
 
-        # Client Service
-        location / {
-            proxy_pass http://client;
-            proxy_cache chyra_cache;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+#     server {
+#         listen 80;
+#         server_name chyra.me www.chyra.me lib.chyra.me;
 
-            # Static File Cache
-            location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|svg|eot|otf|mp4|webm|ogv|webp|pdf|doc|docx|xls|xlsx|ppt|pptx|zip|rar|7z)$ {
-                expires 30d;
-                access_log off;
-            }
-        }
+#         # Client Service
+#         location / {
+#             proxy_pass http://client;
+#             proxy_cache chyra_cache;
+#             proxy_http_version 1.1;
+#             proxy_set_header Upgrade $http_upgrade;
+#             proxy_set_header Connection 'upgrade';
+#             proxy_set_header Host $host;
+#             proxy_cache_bypass $http_upgrade;
 
-        # API Proxy with CORS & Rate Limiting
-        location /api/ {
-            limit_req zone=req_limit burst=20 nodelay;
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With' always;
+#             # Static File Cache
+#             location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|svg|eot|otf|mp4|webm|ogv|webp|pdf|doc|docx|xls|xlsx|ppt|pptx|zip|rar|7z)$ {
+#                 expires 30d;
+#                 access_log off;
+#             }
+#         }
 
-            if ($request_method = OPTIONS) {
-                return 204;
-            }
+#         # API Proxy with CORS & Rate Limiting
+#         location /api/ {
+#             limit_req zone=req_limit burst=20 nodelay;
+#             add_header 'Access-Control-Allow-Origin' '*' always;
+#             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+#             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With' always;
 
-            proxy_pass http://api;
-            proxy_cache chyra_cache;
-            client_max_body_size 200M;
-            proxy_set_header X-Forwarded-For $remote_addr;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
+#             if ($request_method = OPTIONS) {
+#                 return 204;
+#             }
 
-    server {
-        listen 80;
-        server_name api.chyra.me;
+#             proxy_pass http://api;
+#             proxy_cache chyra_cache;
+#             client_max_body_size 200M;
+#             proxy_set_header X-Forwarded-For $remote_addr;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#     }
 
-        location / {
-            proxy_pass http://api;
-            proxy_cache chyra_cache;
-            client_max_body_size 200M;
+#     server {
+#         listen 80;
+#         server_name api.chyra.me;
 
-            proxy_set_header X-Forwarded-For $remote_addr;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
-}
+#         location / {
+#             proxy_pass http://api;
+#             proxy_cache chyra_cache;
+#             client_max_body_size 200M;
+
+#             proxy_set_header X-Forwarded-For $remote_addr;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#     }
+# }
+
+
+#mark 2: ai sucks
+
+# Global configuration for performance and security
+# user www-data;
+# worker_processes auto;
+# worker_rlimit_nofile 100000;
+
+# events {
+#     worker_connections 4096;
+#     multi_accept on;
+#     use epoll;
+# }
+
+# http {
+#     # Basic settings
+#     sendfile on;
+#     tcp_nopush on;
+#     tcp_nodelay on;
+#     keepalive_timeout 65;
+#     types_hash_max_size 2048;
+#     server_tokens off;
+
+#     # MIME types
+#     include /etc/nginx/mime.types;
+#     default_type application/octet-stream;
+
+#     # Logging
+#     access_log /var/log/nginx/access.log;
+#     error_log /var/log/nginx/error.log;
+
+#     # Gzip compression
+#     gzip on;
+#     gzip_min_length 1024;
+#     gzip_comp_level 6;
+#     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+#     gzip_vary on;
+
+#     # Cache settings
+#     proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m max_size=1g inactive=60m use_temp_path=off;
+
+#     # Security headers
+#     add_header X-Frame-Options "SAMEORIGIN";
+#     add_header X-Content-Type-Options "nosniff";
+#     add_header X-XSS-Protection "1; mode=block";
+#     add_header Referrer-Policy "no-referrer-when-downgrade";
+#     # add_header Content-Security-Policy "default-src 'self'; script-src 'self'
+#     #  'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';
+#     #   img-src 'self' data:; font-src 'self'; connect-src 'self';
+#     #    frame-ancestors 'self';";
+
+#     # Rate limiting (optional)
+#     limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+
+#     # Client frontend
+#     server {
+#         listen 80;
+#         server_name lib.chyra.me www.chyra.me chyra.me;
+
+#         # Enable caching for static assets
+#         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+#             proxy_cache my_cache;
+#             proxy_pass http://client:4173;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#             expires 30d;
+#             add_header Cache-Control "public, no-transform";
+#         }
+
+#         # Proxy to client container
+#         location / {
+#             proxy_pass http://client:4173;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+
+#          location /api {
+#             rewrite /api/(.*) /$1 break;
+#             proxy_pass http://api:8080;
+#         }
+#     }
+
+#     # Backend API
+#     server {
+#         listen 80;
+#         server_name api.chyra.me;
+
+#         # Rate limiting (optional)
+#         limit_req zone=one burst=20;
+
+#         # Proxy to API container
+#         location / {
+#             proxy_pass http://api:8080;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#     }
+# }
+
+
+# events {
+#     worker_connections 1024;
+# }
