feat: add user preferences management and session cleanup functionality

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "inversify": "^6.1.4",
     "jsonwebtoken": "^9.0.2",
     "meilisearch": "^0.47.0",
+    "node-cron": "^3.0.3",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
@@ -50,6 +51,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
+    "@types/node-cron": "^3.0.11",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "eslint": "^9.15.0",
