feat: add Jest testing framework and configure CI to run tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "experimentalDecorators": true, // enable experimental support for ES decorators
     "declaration": true, // generate .d.ts files
     "outDir": "./dist", // specify the output directory for compiled files
-    "sourceMap": true // generate source maps
+    "sourceMap": true, // generate source maps
+    "types": ["jest"]
   },
   "include": ["src/**/*", "../digital-library/src/routes/v2"], // include all files under src/
   "exclude": ["node_modules", "dist"] // exclude node_modules and dist folder from compilation
