--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node -r tsconfig-paths/register -r dotenv/config dist/index.js",
     "dev": "nodemon",
     "migrate": "prisma migrate dev",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "clean:coverage": "rimraf coverage",
     "lint": "eslint",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
@@ -50,22 +53,30 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/geoip-lite": "^1.4.4",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "@types/node-cron": "^3.0.11",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.12.0",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "4.0.0-beta1",
     "nodemon": "^3.1.7",
     "prettier": "^3.4.1",
     "prisma": "^5.22.0",
+    "rimraf": "^6.0.1",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
+    "type-fest": "^4.38.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.16.0"
   }
