fix: update Dockerfile to include DATABASE_URL argument and modify Prisma commands for deployment

--- a/Dockerfile.koyeb
+++ b/Dockerfile.koyeb
@@ -3,6 +3,9 @@ FROM node:20-alpine3.18 AS build
 
 WORKDIR /app
 
+ARG DATABASE_URL
+ENV DATABASE_URL=${DATABASE_URL}
+
 # Copy package.json, pnpm-lock.yaml, and .npmrc if it exists
 
 COPY package.json pnpm-lock.yaml ./
@@ -13,7 +16,7 @@ RUN npm install -g pnpm@9.12.2 && pnpm install --frozen-lockfile
 COPY . .
 
 # Build the application
-RUN pnpm dlx prisma generate && pnpm build
+RUN pnpm dlx prisma migrate deploy && pnpm dlx prisma generate && pnpm build
 
 # Stage 2: Production Stage
 FROM node:20-alpine3.18 AS production
