--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsup",
     "start": "node -r tsconfig-paths/register -r dotenv/config dist/index.js",
-    "dev": "nodemon",
+    "dev": "ts-node-dev --respawn --transpile-only --project tsconfig.json --require tsconfig-paths/register --require dotenv/config src/index.ts",
+    "dev:legacy": "nodemon",
     "migrate": "prisma migrate dev",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -77,6 +78,7 @@
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "type-fest": "^4.38.0",
