--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,62 +1,83 @@
-events {
-    worker_connections 1024;
-}
-
-http {
-
-    upstream client-gateway {
-        server client:4173;
+    events {
+        worker_connections 1024;
     }
 
-    upstream api-gateway {
-        server api:8080;
-    }
+    http {
 
-    proxy_cache_path /etc/nginx/cache levels=1:2 keys_zone=chyra_cache:10m max_size=10g inactive=60m use_temp_path=off;
-
-    server {
-        listen 80;
-        server_name lib.chyra.vn www.chyra.vn;
-
-        location / {
-            proxy_pass http://client-gateway; #Don't forget to update your port number
-            proxy_cache chyra_cache;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+        upstream client-gateway {
+            server client:4173;
         }
 
-        location /api {
-            rewrite /api/(.*) /$1 break;
-            proxy_pass http://api;
+        upstream api-gateway {
+            server api:8080;
+        }
+
+        upstream meilisearch-gateway {
+            server meilisearch:7700;
+        }
+
+        proxy_cache_path /etc/nginx/cache levels=1:2 keys_zone=chyra_cache:10m max_size=10g inactive=60m use_temp_path=off;
+
+        server {
+            listen 80;
+            server_name lib.chyra.vn www.chyra.vn;
+
+            location / {
+                proxy_pass http://client-gateway; #Don't forget to update your port number
+                proxy_cache chyra_cache;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+            }
+
+            location /api {
+                rewrite /api/(.*) /$1 break;
+                proxy_pass http://api;
+            }
+        }
+
+        server {
+            listen 80;
+            server_name search.chyra.me www.search.chyra.me;
+
+            location / {
+                proxy_pass http://meilisearch-gateway;
+                proxy_http_version 1.1;
+
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+
+                client_max_body_size 50M;
+            }
+        }
+
+        server {
+            listen 80;
+            server_name api.chyra.me www.api.chyra.me;
+
+            location / {
+                proxy_pass http://api-gateway;
+                proxy_cache chyra_cache;
+                client_max_body_size 200M;
+
+                proxy_set_header X-Forwarded-For $remote_addr;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+            }
+        }
+
+        server {
+            listen 80;
+            server_name admin.chyra.me www.admin.chyra.me;
+
+            location / {
+                return 404;
+            }
         }
     }
-
-    server {
-        listen 80;
-        server_name api.chyra.me www.api.chyra.me;
-
-        location / {
-            proxy_pass http://api-gateway;
-            proxy_cache chyra_cache;
-            client_max_body_size 200M;
-
-            proxy_set_header X-Forwarded-For $remote_addr;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
-
-    server {
-        listen 80;
-        server_name admin.chyra.me www.admin.chyra.me;
-
-        location / {
-            return 404;
-        }
-    }
-}
