fix: correct variable reference for ACCESS_TOKEN_SECRET in CD workflow

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -45,7 +45,7 @@ jobs:
             echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
             echo "POSTGRES_DB=${{ vars.POSTGRES_DB }}" >> .env
             echo "REDIS_URL=${{ vars.REDIS_URL }}" >> .env
-            echo "ACCESS_TOKEN_SECRET=${{ vars.ACCESS_TOKEN_SECRET }}" >> .env
+            echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
             echo "MEILISEARCH_HOST=${{ vars.VITE_MEILISEARCH_HOST }}" >> .env
             echo "MEILISEARCH_API_KEY=${{ secrets.VITE_MEILISEARCH_API_KEY }}" >> .env
             echo "MEILI_MASTER_KEY=${{ secrets.VITE_MEILISEARCH_API_KEY }}" >> .env
